[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["mansaseals <37607676+mansaseals@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vending_machine"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
flask-restful = "^0.3.9"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
pymysql = "^1.0.2"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
