[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["JayAree999 <jayyqwe123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flask-restful = "^0.3.9"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
pymysql = "^1.0.2"
pre-commit = "^3.0.4"
isort = "^5.12.0"
black = "^23.1.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
