[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["Jayyqwe123 <jayyqwe123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
pre-commit = "^3.0.4"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
